--- a/proyectos.html
+++ b/proyectos.html
@@ -459,8 +459,22 @@
                 </div>
               
               <p class="texto-foto-proyectos">Ubicado en la Av. Estrella, al frente del Parque Cívico de Santa Clara, distrito de Ate, el Mall Vecinal Qhatu Plaza es el pionero en su concepto al combinar un mercado tradicional con el retail moderno, gastronomía y la mejor y más moderna oferta en entretenimiento de la zona. Qhatu Plaza ofrece la mejor experiencia en un ambiente cómodo, limpio, seguro y moderno; cuenta con un diseño y equipamiento de fácil acceso para realizar compras y disfrutar de los servicios al mejor precio, características que lo convierten en el Mall Conveniente de la zona.</p>
+              <br><br><br><br><br><br><br><br>
+              <article class="experiencia">
+                <p >PRINCIPALES <strong>MARCAS:</strong></p><br>
+                <div class="contenedor_logos_p">
+                <div class="caja_logo_p"><img src="img/archivos_nov/cineplanet.jpg" alt=""></div>
+                <div class="caja_logo_p"><img src="img/archivos_nov/diverticenter.jpg" alt=""></div>
+                <div class="caja_logo_p"><img src="img/archivos_nov/canastas.jpg" alt=""></div>
+                <div class="caja_logo_p"><img src="img/archivos_nov/efe.jpg" alt=""></div>
+                <div class="caja_logo_p"><img src="img/archivos_nov/mass.jpg" alt=""></div>
+                <div class="caja_logo_p"><img src="img/archivos_nov/hikari.jpg" alt=""></div></div>
+                </article>
+
           </div>
-          <hr> <br> <br>
+          <div class="textocentrado"><p>FECHA DE APERTURA:</p>
+          <p><span class="parpadea">30 de noviembre del 2018</span></p></div>
+           <br> <br><hr>
         </section>
         
     <!--FOOTER  -->
