--- a/clientes.html
+++ b/clientes.html
@@ -117,6 +117,7 @@
           </div>
         </div>
       </div>
+      <p><i class="fas fa-map-marker-alt"></i> <span class="parpadea">AV. PASEO DE LA REPÚBLICA 5895 PISO 11 - EDIFICIO LEURO.[Nueva Dirección desde el 2019]</span></p>
       <p>
         <i class="fas fa-phone"></i> (01) 370 2410</p>
     </div>
