--- a/contactanos.html
+++ b/contactanos.html
@@ -38,9 +38,21 @@
   <article >
     <h3>CONTÁCTANOS</h3>
     <hr>
-    <p>Desarrollo de nuevos proyectos comerciales : Ursula Portillo </p>
-    <p>Proyectos Stand Alone : Jorge Gorrio</p>
-    <p>Desarrollo retail: Gabriel Chu</p>
+    <div class="cajafooter personales">
+      <h3>Contactos Personales</h3>
+    <p>
+      <i class="fas fa-user-circle"></i> Jorge Gorrio Infantas  <br> Proyectos Stand Alone <br>
+       <i class="fas fa-envelope"></i> jgorrio@onretailperu.com  <br>
+       <i class="fas fa-mobile"></i> 947 285 931
+    </p>
+    <p>
+        <i class="fas fa-user-circle"></i> Ursula Portillo Herrera <br>  Desarrollo de nuevos proyectos comerciales <br>
+         <i class="fas fa-envelope"></i> uportillo@onretailperu.com  <br>
+         <i class="fas fa-mobile"></i> 936 250 603
+      </p>
+
+  </div>
+ 
   </article>
   <article class="paneldatos">
     <h3>UBÍCANOS</h3>
@@ -102,6 +114,7 @@
           </div>
         </div>
       </div>
+      <p><i class="fas fa-map-marker-alt"></i> <span class="parpadea">AV. PASEO DE LA REPÚBLICA 5895 PISO 11 - EDIFICIO LEURO.[Nueva Dirección desde el 2019]</span></p>
       <p>
         <i class="fas fa-phone"></i> (01) 370 2410</p>
     </div>
