--- a/clientes.html
+++ b/clientes.html
@@ -65,6 +65,7 @@
       <div class="cliente-logo"><img src="img/socios/ima logo.png" alt=""></div>
       <div class="cliente-logo"><img src="img/socios/jm polo arquitectos logo.png" alt=""></div>
       <div class="cliente-logo"><img src="img/socios/kensal logo.png" alt=""></div>
+      <div class="cliente-logo"><img src="img/socios/lima-consulting-logo.jpg" alt=""></div>
       <div class="cliente-logo"><img src="img/socios/metropolis logo.png" alt=""></div>
       
     </div>
@@ -102,24 +103,21 @@
       </ul>
     </div>
     <div class="cajafooter contacto">
-      <h3>Contacto Empresa</h3>
+      <h3>Ubicación</h3>
       <p class="primero">
         <a href="#miModal">
-          <i class="fas fa-map-marker-alt"></i> Calle Arica Nro. 674 <br> Dpto. 602. <br> Miraflores</a>
+          <i class="fas fa-map-marker-alt"></i> AV. PASEO DE LA REPÚBLICA 5895  <br> PISO 11 EDIFICIO LEURO<br> MIRAFLORES</a>
       </p>
       <div id="miModal" class="modal">
         <div class="modal-contenido">
           <a href="#">X</a>
           <h2>Dirección</h2>
           <div class="mapa">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.9875384694956!2d-77.03786328549337!3d-12.113004991423201!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c83e64d69f5f%3A0xd2587be55282f1e9!2sDpto.+602%2C+Calle+Arica+674%2C+Miraflores+15074!5e0!3m2!1ses-419!2spe!4v1531537361795"
-              width="100%" height="300px" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2269.736158907173!2d-77.02359287544175!3d-12.124992757591004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c81c9a79f037%3A0xe20cce78df6b2ab5!2sPISO+11+-+EDIFICIO%2C+Av.+Paseo+de+la+Republica+5895%2C+Miraflores+15047!5e0!3m2!1ses-419!2spe!4v1545159777642" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
           </div>
         </div>
       </div>
-      <p><i class="fas fa-map-marker-alt"></i> <span class="parpadea">AV. PASEO DE LA REPÚBLICA 5895 PISO 11 - EDIFICIO LEURO.[Nueva Dirección desde el 2019]</span></p>
-      <p>
-        <i class="fas fa-phone"></i> (01) 370 2410</p>
+<p><i class="fas fa-phone"></i> (01) 370 2410</p>
     </div>
 
     <div class="cajafooter personales">
