funcionandoi perfecto, luego de la renovacion de dominio

--- a/contactanos.html
+++ b/contactanos.html
@@ -20,7 +20,7 @@
 <header>
   <div class="logo"><a href="index.html"><img src="img/logo.png" alt=""></a></div>
 </header>
-<div id="boton_menu" class="boton_menu">menú</div>
+<div id="boton_menu" class="boton_menu"><i class="fas fa-home"></i> MENU</div>
 <nav>
    <ul class="menu_lista">
     <li class="swing"><a href="index.html"><i class="fas fa-home"></i> Inicio</a></li>
@@ -57,7 +57,7 @@
   <article class="paneldatos">
     <h3>UBÍCANOS</h3>
     <hr>
-    <p><i class="fas fa-map-marker-alt"></i> AV. PASEO DE LA REPÚBLICA 5895 PISO 11 - EDIFICIO LEURO MIRAFLORES</p>
+    <p><i class="fas fa-map-marker-alt"></i> AV. PASEO DE LA REPÚBLICA 5895 PISO 11 - EDIFICIO LEURO, MIRAFLORES</p>
   
   </article>
   <article class="panelmapa">
@@ -111,7 +111,7 @@
             </div>
           </div>
         </div>
-  <p><i class="fas fa-phone"></i> (01) 370 2410</p>
+   
       </div>
 
     <div class="cajafooter personales">
@@ -130,7 +130,7 @@
     </div>
   </footer>
 <div class="creditos">
-  <p>Todos los derechos reservados, creado por <a href="http://www.geodreamspro.com">GEODREAMS</a>. 2018. ONRETAIL.</p>
+  <p>Todos los derechos reservados, creado por GEODREAMS. 2019. ONRETAIL.</p>
 </div>
 	</div>
 		    <script
