--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>ONRETAIL</title>
+<meta name="google-site-verification" content="google-site-verification=jkbOVNlBZMPJ7ftrrn54ytATWc_20J8zvTcag5RqA1U">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <link rel="stylesheet" href="css/estilos.css">
 <link rel="stylesheet" href="css/efectos.css">
@@ -19,7 +20,7 @@
   <header>
     <div class="logo"><a href="index.html"><img src="img/logo.png" alt=""></a></div>
   </header>
-<div id="boton_menu" class="boton_menu">menú</div>
+<div id="boton_menu" class="boton_menu"><i class="fas fa-home"></i> MENU</div>
 <nav>
    <ul class="menu_lista">
     <li class="swing"><a href="index.html"><i class="fas fa-home"></i> Inicio</a></li>
@@ -169,7 +170,7 @@
             </div>
           </div>
         </div>
-  <p><i class="fas fa-phone"></i> (01) 370 2410</p>
+   
       </div>
 
     <div class="cajafooter personales">
@@ -188,7 +189,7 @@
     </div>
   </footer>
 <div class="creditos">
-  <p>Todos los derechos reservados, creado por <a href="http://www.geodreamspro.com">GEODREAMS</a>. 2018. ONRETAIL.</p>
+  <p>Todos los derechos reservados, creado por GEODREAMS. 2019. ONRETAIL.</p>
 </div>
 		    <script
     src="https://code.jquery.com/jquery-3.3.1.min.js"
