--- a/proyectos.html
+++ b/proyectos.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>ONRETAIL</title>
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/estilos.css?10-12">
   <link rel="stylesheet" href="css/efectos.css"> 
   <link rel="stylesheet" href="css/lightbox.css">
@@ -38,7 +38,7 @@
         </a>
       </div>
     </header>
-    <div id="boton_menu" class="boton_menu">menú</div>
+    <div id="boton_menu" class="boton_menu"><i class="fas fa-home"></i> MENU</div>
     <nav>
         <ul class="menu_lista">
          <li class="swing"><a href="index.html"><i class="fas fa-home"></i> Inicio</a></li>
@@ -561,7 +561,7 @@
               </div>
             </div>
           </div>
-    <p><i class="fas fa-phone"></i> (01) 370 2410</p>
+     
         </div>
 
       <div class="cajafooter personales">
@@ -581,7 +581,7 @@
     </footer>
     <div class="creditos">
       <p>Todos los derechos reservados, creado por
-        <a href="http://www.geodreamspro.com">GEODREAMS</a>. 2018. ONRETAIL.</p>
+        GEODREAMS. 2018. ONRETAIL.</p>
     </div>
   </div>
   <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
