--- a/nosotros.html
+++ b/nosotros.html
@@ -24,7 +24,7 @@
     <header>
       <div class="logo"> <a href="index.html"> <img src="img/logo.png" alt=""> </a> </div>
     </header>
-    <div id="boton_menu" class="boton_menu">menú</div>
+    <div id="boton_menu" class="boton_menu"><i class="fas fa-home"></i> MENU</div>
     <nav>
       <ul class="menu_lista">
         <li class="swing"><a href="index.html"><i class="fas fa-home"></i> Inicio</a></li>
@@ -217,7 +217,7 @@
               </div>
             </div>
           </div>
-    <p><i class="fas fa-phone"></i> (01) 370 2410</p>
+     
         </div>
 
       <div class="cajafooter personales">
@@ -236,7 +236,7 @@
       </div>
     </footer>
     <div class="creditos">
-      <p>Todos los derechos reservados, creado por <a href="http://www.geodreamspro.com">GEODREAMS</a>. 2018. ONRETAIL.</p>
+      <p>Todos los derechos reservados, creado por GEODREAMS. 2019. ONRETAIL.</p>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
